--- a/styles/profile.css
+++ b/styles/profile.css
@@ -249,7 +249,3 @@
 	border-top-right-radius: 4px !important;
 	border-bottom-right-radius: 4px !important;
 }
-
-/* Footer */
-
-.container-footer { position: static !important; }
